--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+# fifo or matched
+spring.profiles.active=fifo
+order.port=9900
+
+order.time.minreach=3
+order.time.maxreach=18
+order.time.backpressure=500
